# advent-of-code-2024

./: Cargo.toml  README.md  output.txt
common/src/: lib.rs
day00/src/: lib.rs
day01/src/: lib.rs
day02/: test.txt
day02/src/: lib.rs
day03/: test.txt
day03/src/: a.rs  b.rs  lib.rs
day04/src/: lib.rs
day05/src/: lib.rs
day06/: easytest.txt  eviltest.txt
day06/src/: lib.rs
day07/src/: lib.rs  part_a.rs  part_b.rs
day08/: escapetest.txt
day08/src/: lib.rs
day09/src/: lib.rs
day10/src/: lib.rs
day11/src/: lib.rs
day12/src/: a.rs  b.rs  lib.rs
day13/: Cargo.toml
day13/src/: lib.rs  memoization.rs
day14/: Cargo.toml
day14/src/: lib.rs  trees.rs
day15/: Cargo.toml  moving2.txt
day15/src/: lib.rs
day16/: Cargo.toml
day16/src/: lib.rs
day17/: Cargo.toml  pisc.txt  test_b_2.txt  test_b_2_sc.txt
day17/src/: lib.rs  machine.rs
day18/: Cargo.toml
day18/src/: lib.rs
day19/src/: lib.rs
day20/: Cargo.toml
day20/src/: lib.rs
input/: day14.txt
src/: main.rs
