workspace = { members = [ "day00", "day01", "day02"] }
[package]
name = "advent-of-code-2024"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day00 = { version = "0.1.0", path = "day00" }
day01 = { version = "0.1.0", path = "day01" }
day02 = { version = "0.1.0", path = "day02" }
