workspace = { members = [ "day00", "day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08"] }
[package]
name = "advent-of-code-2024"
version = "0.24.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day00 = { version = "0.1.0", path = "day00" }
day01 = { version = "0.1.0", path = "day01" }
day02 = { version = "0.1.0", path = "day02" }
day03 = { version = "0.1.0", path = "day03" }
day04 = { version = "0.1.0", path = "day04" }
day05 = { version = "0.1.0", path = "day05" }
day06 = { version = "0.1.0", path = "day06" }
day07 = { version = "0.1.0", path = "day07" }
day08 = { version = "0.1.0", path = "day08" }
